# AutoCellGen

./: .gitignore  README.md
.github/workflows/: codex-review-on-push.yml
MAKE/PLACE_ROUTE/: 1.run_csyn_fp
MAKE/PLACE_ROUTE/csyn_fp/: CMakeLists.txt
MAKE/PLACE_ROUTE/csyn_fp/header/: Router.h
MAKE/PLACE_ROUTE/csyn_fp/src/: Router.cpp
MAKE/POST_CELL_GEN/: run.sh
MAKE/POST_CELL_GEN/scripts/: char.tcl  genQuantusCmd.tcl  get_cell_info.py  prepare_cell_cdl.py  settings_liberate.tcl  template.tcl  template_autocellgen.tcl
